Finshed the project
Added correct statistic analysis.
Printing wage as the prototype shows for each contractor.
HR can edit hours for custom contractor worker.
Removed some unnecesary files.

Co-Authored-By: Benny902 <73943596+Benny902@users.noreply.github.com>
Co-Authored-By: Mikhadi <73593882+Mikhadi@users.noreply.github.com>
Co-Authored-By: maayanadivi <73596043+maayanadivi@users.noreply.github.com>
Co-Authored-By: yardenho <73613642+yardenho@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "new": "cpp",
         "ostream": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp"
     }
 }
